# Tunediver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOs.md  index.html  makefile  package-lock.json  package.json  proxy.php  tsconfig.json  tunediver.manifest
.github/workflows/: deploy-website.yml
api/: documentation.md  music.php
css/: screen.css
design/: icon-new.afphoto  icon.afdesign  index.html
desktop/: makefile
desktop/src-tauri/: tauri.conf.json
frontend/: makefile  package-lock.json  package.json
frontend/public/: index.html
frontend/public/css/: player.css  screen.css
frontend/public/js/: dominate.extended.ts  player.ts  store.ts  tunediver.ts  types.ts
js/: tunediver.js
public/css/: screen.css
public/js/: types.ts
sass/: _player.sass  screen.sass
server/: Cargo.toml  Rocket.toml  build.rs  makefile
server/scripts/: com.tunediver.server.plist.example  launch-tunediver.sh
server/src/: db.rs  main.rs
src/: main.rs
styles/: _player.styl  screen.styl
website/: CNAME  index.html
website/css/: styles.css
website/js/: main.js
